--- a/public/BucketAdmin/html/editable_table.html
+++ b/public/BucketAdmin/html/editable_table.html
@@ -402,11 +402,11 @@
                 <section class="panel">
                     <header class="panel-heading">
                         Editable Table
-                        <span class="tools pull-right">
-                            <a href="javascript:;" class="fa fa-chevron-down"></a>
-                            <a href="javascript:;" class="fa fa-cog"></a>
-                            <a href="javascript:;" class="fa fa-times"></a>
-                         </span>
+<!--                        <span class="tools pull-right">-->
+<!--                            <a href="javascript:;" class="fa fa-chevron-down"></a>-->
+<!--                            <a href="javascript:;" class="fa fa-cog"></a>-->
+<!--                            <a href="javascript:;" class="fa fa-times"></a>-->
+<!--                         </span>-->
                     </header>
                     <div class="panel-body">
                         <div class="adv-table editable-table ">
